making more updates

--- a/contact.html
+++ b/contact.html
@@ -266,8 +266,9 @@
 
 </body>
 
+<script src="app.js"></script>
 <script>
-
+    document.addEventListener("DOMContentLoaded", ShadowScroller);
 </script>
 <script src="index.js"></script>
 
