--- a/contact.html
+++ b/contact.html
@@ -29,8 +29,9 @@
 
                         <ul>
 
+                           
                             <li>
-                                <a href="#">Home</a>
+                                <a href="index.html">Home</a>
                             </li>
 
                             <li>
@@ -38,17 +39,16 @@
                             </li>
 
                             <li>
-                                <a href="#">Services</a>
+                                <a href="services.html">Services</a>
                             </li>
 
                             <li>
-                                <a href="#">Bolg</a>
+                                <a href="blog.html">Blog</a>
                             </li>
 
                             <li>
                                 <a href="#">Insights</a>
                             </li>
-
                         </ul>
 
                     </nav>
