--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="#">Home</a>
+                    <a href="index.html">Home</a>
                 </li>
 
                 <li>
@@ -27,11 +27,11 @@
                 </li>
 
                 <li>
-                    <a href="#">Services</a>
+                    <a href="services.html">Services</a>
                 </li>
 
                 <li>
-                    <a href="#">Blog</a>
+                    <a href="blog.html">Blog</a>
                 </li>
 
                 <li>
